leptos_macro/tests/ui/component.stderr
error: expected parameter name, found `,`
  --> tests/ui/component.rs:16:5
   |
16 |     ,
   |     ^ expected parameter name

error: expected parameter name, found `,`
  --> tests/ui/component.rs:24:5
   |
24 |     ,
   |     ^ expected parameter name

error: expected parameter name, found `,`
  --> tests/ui/component.rs:32:5
   |
32 |     ,
   |     ^ expected parameter name

error: expected parameter name, found `,`
  --> tests/ui/component.rs:40:5
   |
40 |     ,
   |     ^ expected parameter name

error: expected parameter name, found `,`
  --> tests/ui/component.rs:48:5
   |
48 |     ,
   |     ^ expected parameter name

error: return type is incorrect
 --> tests/ui/component.rs:4:1
  |
4 | fn missing_scope() {}
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: return signature must be `-> impl IntoView`

error: return type is incorrect
 --> tests/ui/component.rs:7:1
  |
7 | fn missing_return_type() {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: return signature must be `-> impl IntoView`

error: supported fields are `optional`, `optional_no_strip`, `strip_option`, `default` and `into`
  --> tests/ui/component.rs:10:31
   |
10 | fn unknown_prop_option(#[prop(hello)] test: bool) -> impl IntoView {
   |                               ^^^^^

error: expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`
  --> tests/ui/component.rs:16:5
   |
16 |     ,
   |     ^

error: expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`
  --> tests/ui/component.rs:24:5
   |
24 |     ,
   |     ^

error: expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`
  --> tests/ui/component.rs:32:5
   |
32 |     ,
   |     ^

error: expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`
  --> tests/ui/component.rs:40:5
   |
40 |     ,
   |     ^

error: expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`
  --> tests/ui/component.rs:48:5
   |
48 |     ,
   |     ^
